[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/PotatoShip.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/shoot01.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/PlayerDead.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.0088, 10 )

[sub_resource type="Animation" id=2]
resource_name = "down"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LowerTurret/shoot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "up"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("UpperTurret/shoot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UpperTurret" type="Position2D" parent="."]
position = Vector2( 23.4246, -27.9792 )

[node name="shoot" type="Sprite" parent="UpperTurret"]
visible = false
texture = ExtResource( 3 )

[node name="LowerTurret" type="Position2D" parent="."]
position = Vector2( 24.4853, 27.6256 )

[node name="shoot" type="Sprite" parent="LowerTurret"]
visible = false
texture = ExtResource( 3 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/down = SubResource( 2 )
anims/up = SubResource( 3 )

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="finished" from="Dead" to="." method="_on_Dead_finished"]
